♻️ :: stream 식 변경